<resources>
    <string name="app_name">MyLocationsManager</string>
    <string name="LatTxt">Latitude</string>
    <string name="LongTxt">Longitiude</string>
    <string name="AddPlaceBtn">Add Place</string>
    <string name="File_Name">places.xml</string>
    <string name="WantToTxt">I would like to go</string>
    <string name="HaveBeenTxt">I am here!</string>
    <string name="CommTxt">Comment</string>
    <string name="title_activity_about">About</string>
    <string name="CloseBtnTxt">Back to map</string>
    <string name="app_version">1.3</string>
    <string name="developer_name">Abdullah Basaad</string>
    <string name="app_description">This app will help you manage your places. Record places you want to go or even places you have been in seconds!</string>
    <string name="HaveBeen">Have been</string>
    <string name="WantTo">Want to go</string>
    <string name="ClearBtnTxt">Clear All</string>


</resources>
